# expense_server_python

./: .gitignore  README.md  app.py  pyproject.toml
src/data/: db_setup.py  item_structure.py  spend_item.py
src/models/: spend_item.py
